change class of cards

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores vero soluta quod blanditiis eum. Laboriosam aliquid perferendis dolor sapiente dignissimos, incidunt delectus, deleniti commodi corrupti explicabo culpa eos vitae suscipit minima cupiditate. Fugiat beatae ipsam placeat impedit! Quas dolores, ab, ad molestias excepturi sequi nesciunt reprehenderit aliquam voluptas tempora sint!
                 </p>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-sm-12 col-md-4">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/industria.jpg" alt="Card image cap">
                             <div class="card-body">
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-4">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/industria4.jpg" alt="Card image cap">
                             <div class="card-body">
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-12 col-md-4">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/single.jpg" alt="Card image cap">
                             <div class="card-body">
